Avoid inherited text-align breaking layer list
In response to https://groups.google.com/d/msg/ol3-dev/I3xeroY7zrI/qgdu5cqoXNsJ

--- a/src/ol3-layerswitcher.css
+++ b/src/ol3-layerswitcher.css
@@ -2,6 +2,7 @@
     position: absolute;
     top: 3.5em;
     right: 0.5em;
+    text-align: left;
 }
 
 .layer-switcher .panel {
